feat: home page with search functionality done

--- a/src/scss/_luar-components.scss
+++ b/src/scss/_luar-components.scss
@@ -12,3 +12,4 @@
 @import "luar-components/heading";
 @import "luar-components/divider";
 @import "luar-components/picture";
+@import "luar-components/search-input";
