--- a/src/scss/luar-components/_picture.scss
+++ b/src/scss/luar-components/_picture.scss
@@ -1,26 +1,14 @@
-.character-picture {
-  height: 384px;
-  background-color: rgba($luar_blue, .05);
+.movie-tile {
+  width: 100%;
+  margin: 0;
+  // height: 600px;
+  background-color: $black_text;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
-  span {
-    background-color: rgba(black, .8);
-    padding: .5rem 1rem;
-    padding-top: .7rem;
-    border-radius: 24px;
-    color: white;
-    letter-spacing: 2px;
-    font-weight: 500;
-    font-size: 12px;
-    text-align: center;
-    line-height: 1.4;
-  }
-}
-@media all and (min-width: 700px) {
-  .character-picture {
-    height: 498px;
-    box-shadow: 0 8px 16px rgba(black, .1);
+  flex: 1;
+  img {
+    width: 100%;
   }
 }
