--- a/src/pages/home/components/styles.module.scss
+++ b/src/pages/home/components/styles.module.scss
@@ -51,7 +51,7 @@
   display: flex;
   flex-direction: column;
   &:before {
-    background-color: black;
+    background-color: rgba(black, .8);
     content: 'SEE DETAILS';
     position: absolute;
     left: 0;
