feat: cast list added to movie detail page

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -26,6 +26,7 @@ main {
 	}
 }
 
+// Global styles for all detail pages. movie, actor, etc...
 .detailPageHeader {
   padding: 0 2rem;
   display: flex;
