--- a/src/scss/luar-components/_avatar.scss
+++ b/src/scss/luar-components/_avatar.scss
@@ -12,16 +12,16 @@
 	}
 }
 
-.avatar-character {
+.avatar-cast {
 	padding: 0;
 	overflow: hidden;
 	border-radius: 50%;
-	width: 60px;
-	height: 60px;
+	width: 80px;
+	height: 80px;
 	margin: 0;
 	box-shadow: 0 8px 12px rgba(black, 0.25);
+	margin-bottom: 1.5rem;
 	img {
-		width: 60px;
-		height: 60px;
+		width: 80px;
 	}
 }
