--- a/src/scss/luar-components/_picture.scss
+++ b/src/scss/luar-components/_picture.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   flex: 1;
+  box-shadow: 0 10px 18px rgba(black, .2);
   img {
     width: 100%;
   }
