fix: back arrow icon and functionality fixed, empty state added

--- a/src/pages/home/components/styles.module.scss
+++ b/src/pages/home/components/styles.module.scss
@@ -88,3 +88,9 @@
   justify-content: center;
   padding: 4rem;
 }
+
+.emptyState {
+  display: flex;
+  justify-content: center;
+  padding: 6rem 1rem;
+}
