--- a/src/scss/luar-components/_heading.scss
+++ b/src/scss/luar-components/_heading.scss
@@ -1,3 +1,10 @@
+.headingH2 {
+  font-size: 28px;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: .25rem;
+}
+
 .headingH3 {
   font-size: 21px;
   font-weight: 500;
