--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -31,6 +31,16 @@ main {
   padding: 0 2rem;
   display: flex;
   margin-bottom: 1.25rem;
+  div:first-child {
+    margin-right: 1rem;
+  }
+  button {
+    background-color: transparent;
+    -webkit-appearance: none;
+    outline: none;
+    top: -4px;
+    position: relative;
+  }
 }
 
 .detailPageInfo {
@@ -53,11 +63,24 @@ main {
 
   .detailPageHeader {
     position: relative;
-    a {
+    div:first-child {
+      margin-right: 0;
+    }
+    button {
       position: absolute;
-      left: 0;
-      top: 1px;
+      left: -2px;
+      top: -4px;
+      color: #B0B2BD;
+      transition: all .2s;
+      cursor: pointer;
+    }
+    button:hover {
+      color: #EE1D38;
     }
   }
+}
+
+.text-center {
+  text-align: center;
 }
 
