feat: official logo was added

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Brand Colors
-$luar_blue: #FBC225;
-$luar_pink: #EE1D38;
+$luar_blue: #06D573;
+$luar_pink: #071C23;
 
 // Greys
 $grey_text: #BCBDC3;
